src/test/ui/associated-const/associated-const-generic-obligations.stderr
error[E0326]: implemented const `FROM` has an incompatible type for trait
  --> $DIR/associated-const-generic-obligations.rs:14:17
   |
LL |     const FROM: Self::Out;
   |                 --------- type in trait
...
LL |     const FROM: &'static str = "foo";
   |                 ^^^^^^^^^^^^ expected associated type, found reference
   |
   = note: expected type `<T as Foo>::Out`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0326`.
